; ModuleID = '/home/carl/AnghaBench/netdata/collectors/cgroups.plugin/extr_sys_fs_cgroup.c_mark_all_cgroups_as_not_available.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/cgroups.plugin/extr_sys_fs_cgroup.c_mark_all_cgroups_as_not_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroup = type { i64, %struct.cgroup* }

@D_CGROUP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"marking all cgroups as not available\00", align 1
@cgroup_root = common dso_local global %struct.cgroup* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @mark_all_cgroups_as_not_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_all_cgroups_as_not_available() #0 {
  %1 = alloca %struct.cgroup*, align 8
  %2 = load i32, i32* @D_CGROUP, align 4
  %3 = call i32 @debug(i32 %2, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.cgroup*, %struct.cgroup** @cgroup_root, align 8
  store %struct.cgroup* %4, %struct.cgroup** %1, align 8
  br label %5

5:                                                ; preds = %11, %0
  %6 = load %struct.cgroup*, %struct.cgroup** %1, align 8
  %7 = icmp ne %struct.cgroup* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  %9 = load %struct.cgroup*, %struct.cgroup** %1, align 8
  %10 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  br label %11

11:                                               ; preds = %8
  %12 = load %struct.cgroup*, %struct.cgroup** %1, align 8
  %13 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %12, i32 0, i32 1
  %14 = load %struct.cgroup*, %struct.cgroup** %13, align 8
  store %struct.cgroup* %14, %struct.cgroup** %1, align 8
  br label %5

15:                                               ; preds = %5
  ret void
}

declare dso_local i32 @debug(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
